cleaned processing and playground notebooks, moved Sensor_Sync.ipynb notebook to empkins-validation package

--- a/experiments/2021_07_prestudy/notebooks/preprocessing/Clean_Time_Logs.ipynb
+++ b/experiments/2021_07_prestudy/notebooks/preprocessing/Clean_Time_Logs.ipynb
@@ -9,10 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../../scripts\")\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
@@ -20,8 +23,10 @@
     "import pingouin as pg\n",
     "\n",
     "import biopsykit as bp\n",
+    "from biopsykit.utils.file_handling import get_subject_dirs\n",
+    "from biopsykit.utils.time import timedelta_to_time, get_time_from_date\n",
     "\n",
-    "from empkins_micro.time_logs import process_time_log\n",
+    "from time_logs import process_time_log\n",
     "\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
@@ -32,66 +37,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_01'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_02'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_03'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_04'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_05'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_06'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_07'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_08'),\n",
-       " PosixPath('../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy/data_per_subject/VP_09')]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "base_path = Path(\"../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
     "data_path = base_path.joinpath(\"data_per_subject\")\n",
-    "subject_dirs = bp.utils.file_handling.get_subject_dirs(data_path, \"VP_*\")\n",
+    "subject_dirs = get_subject_dirs(data_path, \"VP_*\")\n",
     "\n",
     "subject_dirs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf4e4b2d90c64228bea73faf5a115aeb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/6 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for subject_dir in tqdm(subject_dirs):\n",
     "    subject_id = subject_dir.name\n",
     "    for condition in [\"control\", \"stress\"]:\n",
     "        timelog_dir = subject_dir.joinpath(\"{}/time_log\".format(condition))\n",
     "        cleaned_dir = timelog_dir.joinpath(\"cleaned\")\n",
+    "        \n",
+    "        timelogs = list(cleaned_dir.glob(\"*.csv\"))\n",
+    "        if len(timelogs) == 0:\n",
+    "            print(f\"No time logs for {subject_id}-{condition}.\")\n",
+    "            continue\n",
     "        timelog = process_time_log(list(cleaned_dir.glob(\"*.csv\"))[0])\n",
     "        timelog.columns = [\"_\".join(col) for col in timelog.columns]\n",
     "        \n",
-    "        timelog = timelog.apply(lambda series: bp.utils.time.timedelta_to_time(bp.utils.time.get_time_from_date(series)))\n",
+    "        timelog = timelog.apply(lambda series: timedelta_to_time(get_time_from_date(series)))\n",
     "\n",
     "        processed_dir = timelog_dir.joinpath(\"processed\")\n",
     "        processed_dir.mkdir(exist_ok=True)\n",
