--- a/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
+++ b/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
@@ -27,10 +27,10 @@
     "import biopsykit as bp\n",
     "from biopsykit.signals.ecg import EcgProcessor\n",
     "\n",
-    "from empkins_io.sensors.radar import load_radar_data, load_radar_data_raw\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "import empkins_io as eio\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -123,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radar_raw, fs_radar = load_radar_data_raw(radar_files[index])\n",
-    "radar, fs_radar = load_radar_data(radar_files[index], datastreams=[\"hr\", \"resp\"])\n",
+    "radar_raw, fs_radar = eio.sensors.a04.load_data_raw(radar_files[index])\n",
+    "radar, fs_radar =  eio.sensors.a04.load_data(radar_files[index], datastreams=[\"hr\", \"resp\"])\n",
     "radar = radar[\"hr\"]"
    ]
   },
@@ -136,35 +136,8 @@
    "source": [
     "import matplotlib\n",
     "fig, ax = plt.subplots()\n",
-    "ecg[[\"acc_x\", \"acc_y\", \"acc_z\"]].plot(ax=ax)\n",
+    "ecg.filter(like=\"acc\").plot(ax=ax)\n",
     "ax.xaxis.set_major_formatter(matplotlib.dates.DateFormatter(\"%H:%M:%S.%f\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ecg[[\"ecg\"]].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#radar_raw[[\"pulse\"]].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#radar_raw[[\"resp\"]].plot()"
    ]
   },
   {
