updated notebooks to use path from config.json

--- a/experiments/2021_07_prestudy/notebooks/preprocessing/ECG_Preprocessing.ipynb
+++ b/experiments/2021_07_prestudy/notebooks/preprocessing/ECG_Preprocessing.ipynb
@@ -8,11 +8,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import sys\n",
     "sys.path.append(\"../../scripts\")\n",
     "\n",
@@ -56,15 +64,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "base_path = Path(\"../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
-    "data_path = base_path.joinpath(\"data_per_subject\")\n",
-    "\n",
-    "subject_dirs = bp.utils.file_handling.get_subject_dirs(data_path, \"VP_*\")"
+    "## Variable and Path Setup"
    ]
   },
   {
@@ -73,7 +76,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "config_file = Path(\"../../config.json\")\n",
+    "with open(config_file) as f:\n",
+    "    config_json = json.load(f)\n",
+    "    base_path = Path(config_json[\"base_path\"])\n",
+    "    \n",
+    "base_path = Path(\"../..\").joinpath(base_path)\n",
+    "data_path = base_path.joinpath(\"data_per_subject\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subject_dirs = bp.utils.file_handling.get_subject_dirs(data_path, \"VP_*\")\n",
     "subject_dirs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process ECG Data"
    ]
   },
   {
@@ -89,7 +115,7 @@
     "    \n",
     "    for condition in tqdm([\"control\", \"stress\"], desc=subject_id):        \n",
     "        ecg_dir = subject_dir.joinpath(\"{}/ecg\").format(condition)\n",
-    "        timelog_dir = subject_dir.joinpath(\"{}/time_log\").format(condition))\n",
+    "        timelog_dir = subject_dir.joinpath(\"{}/time_log\").format(condition)\n",
     "        timelog_dict = load_split_time_logs(timelog_dir.joinpath(\"processed\"))\n",
     "        \n",
     "        ecg_dict, fs = load_folder_nilspod(ecg_dir.joinpath(\"raw\"), phase_names=[\"Pre\", \"MIST\", \"Post\"])\n",
@@ -107,15 +133,6 @@
     "            write_pandas_dict_excel(ep.rpeaks, ecg_export_dir.joinpath(\"rpeaks_result_{}_{}.xlsx\".format(subject_id, key_timelog)))\n",
     "            \n",
     "        subject_dict[subject_id] = ep_dict\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bp.signals.ecg.plotting.ecg_plot(ep, key=\"post\")"
    ]
   },
   {
