--- a/experiments/2021_07_prestudy/playground/DataLoader.ipynb
+++ b/experiments/2021_07_prestudy/playground/DataLoader.ipynb
@@ -8,14 +8,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "import re\n",
+    "import json\n",
+    "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -60,12 +67,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable and Path Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_id = \"VP_02\"\n",
+    "subject_id = \"VP_01\"\n",
     "condition = \"stress\"\n",
     "study_part = \"pre\"\n",
     "\n",
@@ -84,7 +98,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = Path(\"../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
+    "config_file = Path(\"../config.json\")\n",
+    "with open(config_file) as f:\n",
+    "    config_json = json.load(f)\n",
+    "    base_path = Path(config_json[\"base_path\"])\n",
+    "\n",
+    "base_path = Path(\"..\").joinpath(base_path)\n",
+    "\n",
     "data_path = base_path.joinpath(\"data_per_subject/{}/{}\".format(subject_id, condition))\n",
     "\n",
     "ecg_path = data_path.joinpath(\"ecg/raw\")\n",
@@ -105,7 +125,7 @@
     "\n",
     "ecg_file = ecg_files[study_part_dict[study_part]]\n",
     "radar_file = radar_files[study_part_dict[study_part]]\n",
-    "video_file = video_files[3]\n",
+    "video_file = video_files[2]\n",
     "\n",
     "timelog_file = timelog_path.joinpath(\"time_log_{}.csv\".format(subject_id))\n",
     "print(\"{}\\t {}\\t {}\".format(ecg_file.name, radar_file.name, video_file.name))"
