--- a/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
+++ b/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
@@ -8,21 +8,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "import json\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pingouin as pg\n",
-    "import neurokit2 as nk\n",
-    "\n",
-    "import re\n",
-    "\n",
-    "from datetime import datetime\n",
     "\n",
     "import biopsykit as bp\n",
     "from biopsykit.signals.ecg import EcgProcessor\n",
@@ -56,12 +60,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable and Path Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_id = \"VP_06\"\n",
+    "subject_id = \"VP_01\"\n",
     "condition = \"stress\""
    ]
   },
@@ -71,13 +82,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = Path(\"../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
+    "config_file = Path(\"../config.json\")\n",
+    "with open(config_file) as f:\n",
+    "    config_json = json.load(f)\n",
+    "    base_path = Path(config_json[\"base_path\"])\n",
+    "\n",
+    "base_path = Path(\"..\").joinpath(base_path)\n",
     "data_path = base_path.joinpath(\"data_per_subject/{}/{}\".format(subject_id, condition))\n",
     "\n",
     "ecg_path = data_path.joinpath(\"ecg/raw\")\n",
     "radar_path = data_path.joinpath(\"radar/raw\")\n",
     "video_path = data_path.joinpath(\"video\")\n",
     "timelog_path = data_path.joinpath(\"time_log/processed\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Data"
    ]
   },
   {
@@ -95,8 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radar_files = list(sorted(radar_path.glob(\"*.mat\")))\n",
-    "#radar_files"
+    "radar_files = list(sorted(radar_path.glob(\"*.mat\")))"
    ]
   },
   {
@@ -129,6 +151,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot Acc Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -138,6 +167,13 @@
     "fig, ax = plt.subplots()\n",
     "ecg.filter(like=\"acc\").plot(ax=ax)\n",
     "ax.xaxis.set_major_formatter(matplotlib.dates.DateFormatter(\"%H:%M:%S.%f\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process ECG Data"
    ]
   },
   {
@@ -158,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hr_radar = radar[[\"Heart_Rate\"]]"
+    "bp.signals.ecg.plotting.ecg_plot(ecg_processor=ep, key=\"Data\", figsize=(10,5))"
    ]
   },
   {
@@ -167,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bp.signals.ecg.plotting.ecg_plot(ecg_processor=ep, key=\"Data\", figsize=(10,5))"
+    "hr_radar = radar[[\"Heart_Rate\"]]"
    ]
   },
   {
@@ -180,6 +216,13 @@
     "\n",
     "hr_ecg.plot(ax=ax, legend=\"ECG\")\n",
     "hr_radar.plot(ax=ax, legend=\"Radar\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Just some Video/Audio Import Testing..."
    ]
   },
   {
