updated notebooks to parse data path from config.json

--- a/experiments/2021_07_prestudy/notebooks/preprocessing/Clean_Time_Logs.ipynb
+++ b/experiments/2021_07_prestudy/notebooks/preprocessing/Clean_Time_Logs.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import sys\n",
     "sys.path.append(\"../../scripts\")\n",
     "\n",
@@ -42,12 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_file = Path(\"../../config.json\")\n",
-    "with open(config_file) as f:\n",
-    "    config_json = json.load(f)\n",
-    "    base_path = Path(config_json[\"base_path\"])\n",
-    "\n",
-    "base_path = Path(\"../..\").joinpath(base_path)\n",
+    "base_path = Path(\"../../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
     "data_path = base_path.joinpath(\"data_per_subject\")\n",
     "subject_dirs = get_subject_dirs(data_path, \"VP_*\")\n",
     "\n",
