moved preprocessing notebooks into data folder

--- a/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
+++ b/experiments/2021_07_prestudy/playground/EmpkinS_IO.ipynb
@@ -8,21 +8,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and Helper Functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import re\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pingouin as pg\n",
     "import neurokit2 as nk\n",
-    "\n",
-    "import re\n",
-    "\n",
-    "from datetime import datetime\n",
     "\n",
     "import biopsykit as bp\n",
     "from biopsykit.signals.ecg import EcgProcessor\n",
@@ -56,12 +62,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable and Path Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject_id = \"VP_06\"\n",
+    "subject_id = \"VP_01\"\n",
     "condition = \"stress\""
    ]
   },
@@ -71,7 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = Path(\"../../../../../HealthPsychology_D03/Data/2021_06_Micro_Prestudy\")\n",
+    "config_file = Path(\"../config.json\")\n",
+    "with open(config_file) as f:\n",
+    "    config_json = json.load(f)\n",
+    "    base_path = Path(config_json[\"base_path\"])\n",
+    "\n",
+    "base_path = Path(\"..\").joinpath(base_path)\n",
     "data_path = base_path.joinpath(\"data_per_subject/{}/{}\".format(subject_id, condition))\n",
     "\n",
     "ecg_path = data_path.joinpath(\"ecg/raw\")\n",
@@ -81,12 +99,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "ecg_files = list(sorted(ecg_path.glob(\"*.bin\")))"
+    "### Look for ECG and Radar Files"
    ]
   },
   {
@@ -95,8 +111,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radar_files = list(sorted(radar_path.glob(\"*.mat\")))\n",
-    "#radar_files"
+    "ecg_files = list(sorted(ecg_path.glob(\"*.bin\")))\n",
+    "radar_files = list(sorted(radar_path.glob(\"*.mat\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import ECG and Radar Data"
    ]
   },
   {
@@ -138,6 +161,13 @@
     "fig, ax = plt.subplots()\n",
     "ecg.filter(like=\"acc\").plot(ax=ax)\n",
     "ax.xaxis.set_major_formatter(matplotlib.dates.DateFormatter(\"%H:%M:%S.%f\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Process ECG and Radar Data"
    ]
   },
   {
@@ -183,12 +213,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some Audio/Video Import Experiments..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import Video, Audio"
+    "from ipywidgets import Video, Audio\n",
+    "import librosa\n",
+    "from librosa.display import waveplot\n",
+    "import ffmpeg"
    ]
   },
   {
@@ -207,31 +247,6 @@
    "outputs": [],
    "source": [
     "Video.from_file(video_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import librosa\n",
-    "from librosa.display import waveplot\n",
-    "import ffmpeg"
    ]
   },
   {
