add working lstm version

--- a/empkins_micro/emrad/notebooks/DetectRadarSyncPeaks.ipynb
+++ b/empkins_micro/emrad/notebooks/DetectRadarSyncPeaks.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:#FF7F50\">First we rename all files correctly</span>"
+    "<span style=\"color:#FF7F50\">First we rename all raw emrad .h5 files correctly</span>"
    ]
   },
   {
